fixed invisible hover over latitude to index page

--- a/Projects/WebDashboard/stylesheets/sylesheet.css
+++ b/Projects/WebDashboard/stylesheets/sylesheet.css
@@ -21,8 +21,11 @@ hr {
 .homelink {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 20px;
-    color: whitesmoke;
-    /* margin: 0px 10px; */
+    color: white;
+}
+
+.homelink:hover, .homelink:focus, .homelink:active {
+    color: teal;
 }
 
 .brandbox {
